--- a/YoutubeClon/Channel/ChannelViewController.xib
+++ b/YoutubeClon/Channel/ChannelViewController.xib
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina6_1" orientation="portrait" appearance="dark"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -17,14 +17,40 @@
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="channelplayholder" translatesAutoresizingMaskIntoConstraints="NO" id="v0y-Pw-hM7">
+                    <rect key="frame" x="87" y="279" width="240" height="128"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="128" id="gLh-FA-FLh"/>
+                    </constraints>
+                </imageView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This channel doesn't feature any other channels." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="92X-S9-1Rd">
+                    <rect key="frame" x="69.5" y="447" width="275.5" height="14.5"/>
+                    <color key="tintColor" name="grayColor"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+            </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
-            <color key="backgroundColor" systemColor="systemPinkColor"/>
+            <color key="backgroundColor" name="backgroundColor"/>
+            <constraints>
+                <constraint firstItem="v0y-Pw-hM7" firstAttribute="centerX" secondItem="92X-S9-1Rd" secondAttribute="centerX" id="6k6-1K-WUJ"/>
+                <constraint firstItem="92X-S9-1Rd" firstAttribute="top" secondItem="v0y-Pw-hM7" secondAttribute="bottom" constant="40" id="Hwg-3J-S9U"/>
+                <constraint firstItem="v0y-Pw-hM7" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="87" id="MBd-ip-pkU"/>
+                <constraint firstItem="v0y-Pw-hM7" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="235" id="rgx-ma-cAQ"/>
+                <constraint firstItem="v0y-Pw-hM7" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="sJe-bo-9j4"/>
+            </constraints>
             <point key="canvasLocation" x="139" y="133"/>
         </view>
     </objects>
     <resources>
-        <systemColor name="systemPinkColor">
-            <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
+        <image name="channelplayholder" width="599" height="493"/>
+        <namedColor name="backgroundColor">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="grayColor">
+            <color red="0.33333333333333331" green="0.33333333333333331" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
