--- a/YoutubeClon/Home/View/CustomCell/PlaylistCell.xib
+++ b/YoutubeClon/Home/View/CustomCell/PlaylistCell.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="dark"/>
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
@@ -50,12 +50,12 @@
                                         <rect key="frame" x="7" y="0.0" width="16" height="16"/>
                                         <color key="tintColor" name="backgroundColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                        <nil key="textColor"/>
+                                        <color key="textColor" name="grayColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="text.alignleft" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="QpY-Yu-hIY">
                                         <rect key="frame" x="5" y="27.5" width="20" height="16.5"/>
-                                        <color key="tintColor" name="whiteColor"/>
+                                        <color key="tintColor" name="grayColor"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="20" id="YuX-cZ-ghI"/>
                                             <constraint firstAttribute="width" constant="20" id="wmD-9J-eGa"/>
