--- a/YoutubeClon/Home/View/CustomCell/VideoCell.xib
+++ b/YoutubeClon/Home/View/CustomCell/VideoCell.xib
@@ -90,7 +90,7 @@
                 <outlet property="videoName" destination="Bpr-bo-SuT" id="hmA-jn-QSH"/>
                 <outlet property="viewsCount" destination="zXV-8j-KWA" id="Zcm-RO-Cqc"/>
             </connections>
-            <point key="canvasLocation" x="180" y="140"/>
+            <point key="canvasLocation" x="178.98550724637681" y="139.62053571428569"/>
         </tableViewCell>
     </objects>
     <resources>
